# Greenhouse

./: Dockerfile  README.md  pyproject.toml  requirements.txt
doc/: Makefile  make.bat
doc/source/: conf.py  database_operations.rst  index.rst  messdaten.rst  school_logging.rst
greenhouse/: database_operations.py  main.py  measurements2db.py  messdaten.py  requirements.txt  test.py
school_logging/: log.py
scripts/shell/: install_dependencies.sh
